--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@ code{background:var(--surface);border:1px solid var(--border);border-radius:5px;
 /* ═══════════════════════════════════════
    GLOBAL STATE
 ═══════════════════════════════════════ */
-const GEMINI_URL = "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash-preview:generateContent";
+const GEMINI_URL = "https://generativelanguage.googleapis.com/v1beta/models/gemini-3-flash-preview:generateContent";
 let API_KEY = localStorage.getItem('tt40_key') || '';
 let fbBase64 = '';
 let invoiceBase64 = '';
