--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@ tr:nth-child(even) td{background:var(--g4)}
 // ═══════════════════════════════════════════════
 //  CONSTANTS & STATE
 // ═══════════════════════════════════════════════
-const GEMINI = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent';
+const GEMINI = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-3-flash-preview:generateContent';
 const LOW = 5, TAX_TH = 500_000_000;
 
 // In-memory store (no localStorage)
@@ -1422,3 +1422,4 @@ async function doCopy(boxId,btnId){const b=document.getElementById(boxId);if(!b)
 </script>
 </body>
 </html>
+
