--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@ tr:nth-child(even) td{background:var(--g4)}
 // ═══════════════════════════════════════════
 //  CONSTANTS
 // ═══════════════════════════════════════════
-const GEMINI_URL = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent';
+const GEMINI_URL = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-3-flash-preview:generateContent';
 const LOW = 5, TAX_TH = 500_000_000;
 
 // ═══════════════════════════════════════════
@@ -1589,3 +1589,4 @@ async function doCopy(boxId,btnId){const b=document.getElementById(boxId);if(!b)
 </script>
 </body>
 </html>
+
